Removed index.html from the hrefs. Updated #subPageHeader css with a min-width selector to fit content, avoiding the button to cause overflow due to responsive scaling at small resolutions. Updated the globalStyles.css with Html background color info, lightmode sensitive, and replaced the in-element style on the frontpage with this.

--- a/EasyFlix/returnHome.css
+++ b/EasyFlix/returnHome.css
@@ -12,7 +12,7 @@ font-size: 200%;
 color:white;
 text-align: center;
 align-content: center;
-
+min-width: fit-content;
 }
 
 a:has(>#returnHome){
